--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.5"
   },
